--- a/.env.dist
+++ b/.env.dist
@@ -42,4 +42,4 @@ MAILER_URL=null://localhost
 
 ## pgsql://username:password@host:port/database_name ##
 
-DATABASE_URL=pgsql://yourUser:yourPass@127.0.0.1:5432/yourDatabase
+DATABASE_URL=pgsql://postgres:1988@127.0.0.1:5433/sonatest
