--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -3,17 +3,19 @@ doctrine:
         # configure these for your database server
         # use postgresql for PostgreSQL
         # use sqlite for SQLite
-        driver: 'mysql'
-        server_version: '5.7'
+        driver: 'pdo_pgsql'
+#        server_version: '5.7'
 
         # only needed for MySQL
-        charset: utf8mb4
+        charset: utf8
         default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
-
+            charset: utf8
+            collate: utf8_unicode_ci
         url: '%env(resolve:DATABASE_URL)%'
     orm:
+        dql:
+            numeric_functions:
+                Random: Qbbr\PgsqlDoctrineRandomFunction\DQL\RandomFunction
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
