--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,9 @@
 framework:
+    translator: { fallbacks: ['en'] }
+    templating:
+        engines: ['twig', 'php']
     secret: '%env(APP_SECRET)%'
+    default_locale: en
     #csrf_protection: true
     #http_method_override: true
 
