--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    image_directory: '%kernel.project_dir%/public/image'
 
 services:
     # default configuration for services in *this* file
@@ -15,7 +16,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,Listeners}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -25,3 +26,16 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    admin.property:
+        class: App\Admin\PropertyAdmin
+        arguments: [~, App\Entity\Property, App\Controller\PropertyAdminController]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Property, label: Property, on_top: true }
+        public: true
+
+#    doctrine.property_listener:
+#        class: App\Listener\PropertyListener
+#        arguments: []
+#        tags:
+#            - { name: doctrine.event_listener, entity: Property, event: preUpdate, method: preUpdate }
